--- a/hitagget/mainwindow.ui
+++ b/hitagget/mainwindow.ui
@@ -44,11 +44,11 @@
       <x>-1</x>
       <y>-1</y>
       <width>341</width>
-      <height>541</height>
+      <height>521</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="page">
      <layout class="QGridLayout" name="gridLayout">
@@ -69,81 +69,6 @@
         <property name="text">
          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt; color:#80b766;&quot;&gt;Nombre:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
-       </widget>
-      </item>
-      <item row="4" column="0">
-       <widget class="QLineEdit" name="leCorreoReg">
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="0" colspan="2">
-       <widget class="QLabel" name="lblcontra">
-        <property name="font">
-         <font>
-          <family>Comic Sans MS</family>
-          <pointsize>8</pointsize>
-          <weight>50</weight>
-          <italic>false</italic>
-          <bold>false</bold>
-         </font>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">font: 8pt &quot;Comic Sans MS&quot;;</string>
-        </property>
-        <property name="text">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt; color:#80b766;&quot;&gt;Contraseña:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-        </property>
-       </widget>
-      </item>
-      <item row="11" column="0" colspan="2">
-       <widget class="QPushButton" name="btnRegistrar">
-        <property name="font">
-         <font>
-          <family>Comic Sans MS</family>
-          <pointsize>12</pointsize>
-         </font>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(52, 80, 113);
-color: rgb(255, 255, 255);</string>
-        </property>
-        <property name="text">
-         <string>Registrar</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0" colspan="2">
-       <widget class="QLabel" name="lblLogo">
-        <property name="text">
-         <string/>
-        </property>
-        <property name="scaledContents">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0" colspan="2">
-       <widget class="QLineEdit" name="leNombreReg"/>
-      </item>
-      <item row="4" column="1">
-       <widget class="QComboBox" name="cbReg">
-        <item>
-         <property name="text">
-          <string>@hotmail.com</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>@gmail.com</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>@outlook.com</string>
-         </property>
-        </item>
        </widget>
       </item>
       <item row="3" column="0" colspan="2">
@@ -175,6 +100,81 @@ color: rgb(255, 255, 255);</string>
         </property>
        </widget>
       </item>
+      <item row="7" column="0" colspan="2">
+       <widget class="QLabel" name="lblcontra">
+        <property name="font">
+         <font>
+          <family>Comic Sans MS</family>
+          <pointsize>8</pointsize>
+          <weight>50</weight>
+          <italic>false</italic>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">font: 8pt &quot;Comic Sans MS&quot;;</string>
+        </property>
+        <property name="text">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt; color:#80b766;&quot;&gt;Contraseña:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0" colspan="2">
+       <widget class="QLineEdit" name="leNombreReg"/>
+      </item>
+      <item row="0" column="0" colspan="2">
+       <widget class="QLabel" name="lblLogo">
+        <property name="text">
+         <string/>
+        </property>
+        <property name="scaledContents">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QComboBox" name="cbReg">
+        <item>
+         <property name="text">
+          <string>@hotmail.com</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>@gmail.com</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>@outlook.com</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="9" column="0" colspan="2">
+       <widget class="QPushButton" name="btnRegistrar">
+        <property name="font">
+         <font>
+          <family>Comic Sans MS</family>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(52, 80, 113);
+color: rgb(255, 255, 255);</string>
+        </property>
+        <property name="text">
+         <string>Registrar</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0">
+       <widget class="QLineEdit" name="leCorreoReg">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
       <item row="5" column="0" colspan="2">
        <widget class="QLabel" name="lblerrorReg">
         <property name="styleSheet">
@@ -182,6 +182,13 @@ color: rgb(255, 255, 255);</string>
         </property>
         <property name="text">
          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;justify&quot;&gt;&lt;span style=&quot; color:#ff0000;&quot;&gt;ESTE CORREO NO SE ENCUENTRA REGISTRADO&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;justify&quot;&gt;&lt;span style=&quot; color:#ff0000;&quot;&gt;TE RECOMENDAMOS CREAR UNA CUENTA&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+       </widget>
+      </item>
+      <item row="10" column="0" colspan="2">
+       <widget class="QPushButton" name="btnGoBack">
+        <property name="text">
+         <string>Regresar</string>
         </property>
        </widget>
       </item>
@@ -308,7 +315,6 @@ color: rgb(255, 255, 255);</string>
   <tabstop>leCorreoReg</tabstop>
   <tabstop>cbReg</tabstop>
   <tabstop>leContraReg</tabstop>
-  <tabstop>btnRegistrar</tabstop>
  </tabstops>
  <resources/>
  <connections/>
