--- a/hitagget/viewpost.ui
+++ b/hitagget/viewpost.ui
@@ -332,9 +332,9 @@ background-color: white;</string>
   <widget class="QLabel" name="lblPostID">
    <property name="geometry">
     <rect>
-     <x>950</x>
+     <x>870</x>
      <y>20</y>
-     <width>91</width>
+     <width>171</width>
      <height>21</height>
     </rect>
    </property>
@@ -393,6 +393,50 @@ background-color: white;</string>
    </property>
    <property name="text">
     <string/>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnDeletePost">
+   <property name="geometry">
+    <rect>
+     <x>760</x>
+     <y>10</y>
+     <width>91</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
+   <property name="text">
+    <string>Eliminar</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnEditPost">
+   <property name="geometry">
+    <rect>
+     <x>650</x>
+     <y>10</y>
+     <width>91</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
+   <property name="text">
+    <string>Editar</string>
    </property>
   </widget>
  </widget>
