--- a/hitagget/viewpost.ui
+++ b/hitagget/viewpost.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../build/Imagenes/logo_icon.ico</normaloff>../build/Imagenes/logo_icon.ico</iconset>
+  </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(21, 32, 43);
 color: rgb(255, 255, 255)</string>
